给用户添加角色管理, 后续可以由此控制用户的访问权限. 代码更改完成, 没有详细测,后续测试, 下一步:  修改管理员界面,管理员可以任意切换用户组, 赋予某个用户某种角色.

--- a/docs/production.asciidoc
+++ b/docs/production.asciidoc
@@ -95,7 +95,7 @@ Shield provides index-level access control. If a user isn't authorized to run
 the query that populates a Kibana visualization, the user just sees an empty
 visualization.
 
-To configure access to Kibana using Shield, you create Shield roles
+To configure access to Kibana using Shield, you create Shield role
 for Kibana using the `kibana4` default role as a starting point. For more
 information, see {shield}/kibana.html#using-kibana4-with-shield[Using Kibana 4 with Shield].
 
